# agenticRAG

./: .gitignore  README.md  main.py  pyproject.toml
assets/vector_store/: chroma.sqlite3
config/: __init__.py  settings.py
data/documents/: .gitkeep
data/vectorstore/: .gitkeep
scripts/: seed_database.py  view_database.py
src/: __init__.py
src/agents/: __init__.py  agent_base.py  master.py  resource_agent.py  retrieval_agent.py  sql_agent.py  worker_base.py  worker_generation.py  worker_retrieval.py  worker_sql.py  worker_websearch.py
src/services/: VectorStore.py  __init__.py
src/services/database/: __init__.py  connection.py  repository.py  schema.py
src/services/datasource/: HTMLVectorStore.py  PDFVectorStore.py  SQLVectorStore.py  __init__.py  html_toolkit.py  pdf_toolkit.py
src/services/mcp/: MCPFetch.py  MCPTime.py  MCPWebSearch.py  __init__.py  mcp_fetch.py  mcp_wrapper.py
src/utils/: __init__.py
src/utils/helpers/: __init__.py  chunking.py  logger.py  text_processing.py
src/utils/tools/: __init__.py  database_tools.py  retrieval_tools.py  search_tools.py
tests/: __init__.py  conftest.py
tests/agents/: test_resource_agent.py  test_retrieval_agent.py  test_worker_sql.py  test_worker_url.py
tests/database/: __init__.py  test_connection.py  test_repository.py  test_schema.py
tests/services/datasource/: __init__.py  test_html_toolkit.py  test_pdf_toolkit.py
tests/services/mcp/: mcp_fetch.py
